<resources>
    <string name="app_name">One Clean</string>

    <string name="facebook_app_id" translatable="false">1111</string>
    <string name="facebook_client_token" translatable="false">2222</string>

    <string name="this_action_may_contains_ads">this action may contains ads</string>
    <string name="string_ok">OK</string>
    <string name="string_cancel">Cancel</string>
    <string name="grant_permission_to_use">Grant permission to use</string>
    <string name="string_scan">Scan</string>
    <string name="free_up_space">More Features</string>
    <string name="big_file_clean">Big File Clean</string>
    <string name="app_manager">App Manager</string>
    <string name="device_status">Device Status</string>
    <string name="duplicate_files">Duplicate Files</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="string_scanning">Scanning…</string>
    <string name="app_cache">App Cache</string>
    <string name="apk_files">Apk Files</string>
    <string name="log_files">Log Files</string>
    <string name="ad_junk">AD junk</string>
    <string name="temp_files">Temp Files</string>
    <string name="string_tips">Tips</string>
    <string name="string_scanning_stop_tip">Are you sure you want to exit the cleaning scan? The current scanning progress will be lost after exiting.</string>
    <string name="string_junk">Junk</string>
    <string name="clean_junk">Clean Junk</string>

    <string name="how_to_do">How To Do</string>
    <string name="make_sure_this_option_is_turned_on">Make Sure This Option Is Turned On</string>
    <string name="user_guide">User Guide</string>
    <string name="please_ensure_this_option_is_enabled">Please ensure this option is enabled.</string>

    <string name="got_it">GOT IT</string>
    <string name="clean_finished">Clean Finished !</string>
    <string name="string_continue">Continue</string>
    <string name="junk_cleaning">junk cleaning…</string>
    <string name="string_cleaning_stop_tip">Are you sure you want to exit? The current cleaning progress will be lost after exiting.</string>
    <string name="clean_finished_">Clean Finished</string>
    <string name="your_phone_is_already_cleaned">Your Phone Is Already Cleaned·</string>
    <string name="empty_folders">Empty Folders</string>
    <string name="string_clean">Clean</string>
    <string name="empty_folders_cleaning">empty folders cleaning…</string>
    <string name="phone_model">Phone Model</string>
    <string name="operating_system_version">Operating System Version</string>
    <string name="status_information">Status Information</string>
    <string name="str_screen">Screen</string>
    <string name="string_resolution">Resolution</string>
    <string name="screen_accuracy">Screen Accuracy</string>
    <string name="multi_touch">Multi Touch</string>
    <string name="string_support">Support</string>
    <string name="string_no_support">Not Support</string>
    <string name="string_battery">Battery</string>
    <string name="health_status">Health Status</string>
    <string name="current_capacity">Current Capacity</string>
    <string name="total_capacity">Total Capacity</string>
    <string name="string_voltage">Voltage</string>
    <string name="string_temperature">Temperature</string>
    <string name="battery_status">Battery Status</string>
    <string name="str_charging">Charging</string>
    <string name="battery_technology">Battery Technology</string>
    <string name="string_sensor">Sensor</string>
    <string name="acceleration_sensor">Acceleration Sensor</string>
    <string name="magnetic_field_sensor">Magnetic Field Sensor</string>
    <string name="orientation_sensor">Orientation Sensor</string>
    <string name="gyro_sensor">Gyro Sensor</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="distance_sensor">Distance Sensor</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="string_storage_size">Storage: %1$s/%2$s</string>
    <string name="string_memory_size">Memory: %1$s/%2$s</string>
    <string name="string_good">Good</string>
    <string name="string_overheat">Overheat</string>
    <string name="string_dead">Dead</string>
    <string name="over_voltage">Over Voltage</string>
    <string name="unspecified_failure">Unspecified Failure</string>
    <string name="string_unknown">Unknown</string>
    <string name="string_discharging">Discharging</string>
    <string name="not_charging">Not Charging</string>
    <string name="string_full">Full</string>
    <string name="string_wireless">Wireless</string>
    <string name="not_plugged">Not Plugged</string>
    <string name="big_files">Big Files</string>

    <string name="big_file_all">All</string>
    <string name="big_file_photo">Photo</string>
    <string name="big_file_video">Video</string>
    <string name="big_file_audio">Audio</string>
    <string name="big_file_docs">Docs</string>
    <string name="big_file_zip">Zip</string>
    <string name="big_file_apk">Apk</string>
    <string name="big_file_others">Others</string>

    <string name="big_file_10">10MB</string>
    <string name="big_file_50">50MB</string>
    <string name="big_file_100">100MB</string>
    <string name="big_file_500">500MB</string>
    <string name="big_file_1000">1GB</string>

    <string name="big_file_all_time">All Time</string>
    <string name="big_file_one_week">One Week</string>
    <string name="big_file_one_month">One Month</string>
    <string name="big_file_three_month">Three Months</string>
    <string name="big_file_six_month">Six Months</string>
    <string name="big_file_one_year">One Year</string>
    <string name="delete_big_file_tip">Are you sure you want to delete the selected file? Cannot be restored after deletion!</string>
    <string name="ads_loading">Ads loading…</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>
    <string name="string_setting">Setting</string>
    <string name="string_uninstall">Uninstall</string>

    <string name="string_antivirus">Antivirus</string>
    <string name="engine_init">Engine Init</string>
    <string name="str_virus">Virus</string>
    <string name="string_malware">Malware</string>
    <string name="data_collection_notice">Data Collection Notice</string>

    <string name="trust_look_privacy_tips"><![CDATA[【OneClean】Trustlook\'s antivirus SDK collects information about installed apps, including package names, signatures, and hashes, to scan for malware on the device. This data is sent to Trustlook\'s cloud service for virus detection. For more details, please review Trustlook\'s privacy policy:<a href=\'https://www.trustlook.com/privacy-policy\'>https://www.trustlook.com/privacy-policy</a>]]></string>
    <string name="string_agree">Agree</string>

    <string name="string_scanning_stop_tip_virus">Are you sure you want to exit virus scanning? The current scanning progress will be lost after exiting.</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="scan_error">Scan Error</string>
    <string name="string_risk">Risk</string>
    <string name="string_remove">Remove</string>
    <string name="delete_failed">Delete Failed!</string>
    <string name="sure_to_delete">Sure To Delete?</string>
    <string name="threats_found">%1$d Threats Found</string>
    <string name="string_confirm">Confirm</string>
    <string name="no_threats_found">No Threats Found</string>
    <string name="all_threats_resolved">All Threats Resolved</string>
    <string name="request_notice_per_des">Please enable notifications for important alerts.</string>

    <string name="recent_app">Recent App</string>
    <string name="deselect_all">Deselect All</string>
    <string name="duplicate_file_delete_tip">The Selected Files Cannot Be Recovered After Being Deleted. Do You Want To Continue?</string>
    <string name="duplicate_files_cleaning">Duplicate files cleaning…</string>
    <string name="a_total_of_has_been_deleted">A total of %1$s has been deleted.</string>
    <string name="string_preview">Preview</string>
    <string name="open_failed">Open Failed!</string>
    <string name="install_error_tip">[One Clean] doesn\'t not have permission to install items</string>
    <string name="same_has_been_selected">The same document has been selected</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_permission_to_use_feature">Grant Permission to Use Feature</string>
    <string name="string_launches">Launches</string>
    <string name="string_launch">Launch</string>
    <string name="screen_time">Screen time</string>
    <string name="string_foreground">Foreground</string>
    <string name="string_background">Background</string>
    <string name="string_stop">Stop</string>
    <string name="tap_force_stop_to_quit_the_running_app_completely">Tap\"Force stop\" to quit the running app completely.</string>
    <string name="no_launch_time">Launch time is 0</string>
    <string name="string_last7days">Last 7 Days</string>
    <string name="string_yesterday">Yesterday</string>
    <string name="string_last60min">Last 60 mins</string>
    <string name="string_today">Today</string>
    <string name="no_data_yet">No Data Yet</string>
    <string name="network_traffic">Network Traffic</string>
    <string name="string_skip">SKIP</string>
    <string name="allow_permission_to_scan_for_junk_files">Allow permission to scan for junk files</string>
    <string name="just_a_moment_while_we_get_things_ready">Just a moment while we get things ready</string>

</resources>