<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:id="@+id/clean"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/string_clean"
            android:src="@drawable/svg_notice_clean" />

        <TextView
            android:id="@+id/tv_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/string_clean"
            android:textColor="@color/color_333333"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/antivirus"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/string_antivirus"
            android:src="@drawable/svg_notice_antivirus" />

        <TextView
            android:id="@+id/tv_antivirus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/string_antivirus"
            android:textColor="@color/color_333333"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/big_files"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/svg_notice_big_files"
            android:contentDescription="@string/big_files" />

        <TextView
            android:id="@+id/tv_big_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/big_files"
            android:textColor="@color/color_333333"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_folder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/svg_notice_empty_folders"
            android:contentDescription="@string/empty_folders" />

        <TextView
            android:id="@+id/tv_empty_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/empty_folders"
            android:layout_marginTop="2dp"
            android:textColor="@color/color_333333"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>