<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_fff_r12">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:src="@drawable/close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:includeFontPadding="false"
        android:text="@string/data_collection_notice"
        android:textColor="@color/color_333333"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/color_8d8d8d"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="@string/trust_look_privacy_tips" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple_clean_continue_btn"
        android:gravity="center"
        android:includeFontPadding="false"
        android:minWidth="213dp"
        android:text="@string/string_agree"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />


</androidx.constraintlayout.widget.ConstraintLayout>